--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ Source Sans Variable */
   font-family: 'Leckerli One', cursive;
   text-align: center;
   align-content: center;
-  
+  background-color: #fcf8fb;
   width: 586px;
 }
 
